snapshots/DeepSpeech/native_client/kenlm/util/sized_iterator_test.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 22
kind: unit
spaces:
  - name: util
    start_line: 6
    end_line: 22
    kind: namespace
    spaces:
      - name: ~
        start_line: 6
        end_line: 22
        kind: namespace
        spaces:
          - name: CompareChar
            start_line: 8
            end_line: 12
            kind: struct
            spaces:
              - name: operator()
                start_line: 9
                end_line: 11
                kind: function
                spaces: []
                metrics:
                  nargs:
                    function_args: 2
                    closure_args: 0
                    function_args_average: 2
                    closure_args_average: 0
                    total: 2
                    value: 2
                    average: 2
                    function_args_min: 2
                    function_args_max: 2
                    closure_args_min: 0
                    closure_args_max: 0
                  nexits:
                    sum: 1
                    average: 1
                    min: 1
                    max: 1
                  cognitive:
                    sum: 0
                    value: 0
                    average: 0
                    min: 0
                    max: 0
                  cyclomatic:
                    sum: 1
                    value: 1
                    average: 1
                    min: 1
                    max: 1
                    modified:
                      sum: 1
                      value: 1
                      average: 1
                      min: 1
                      max: 1
                  halstead:
                    unique_operators: 13
                    total_operators: 25
                    unique_operands: 3
                    total_operands: 6
                    length: 31
                    estimated_program_length: 52.861
                    purity_ratio: 1.705
                    vocabulary: 16
                    volume: 124
                    difficulty: 13
                    level: 0.077
                    effort: 1612
                    time: 89.556
                    bugs: 0.046
                  loc:
                    sloc: 3
                    ploc: 3
                    lloc: 1
                    cloc: 0
                    blank: 0
                    sloc_average: 3
                    ploc_average: 3
                    lloc_average: 1
                    cloc_average: 0
                    blank_average: 0
                    sloc_min: 3
                    sloc_max: 3
                    cloc_min: 0
                    cloc_max: 0
                    ploc_min: 3
                    ploc_max: 3
                    lloc_min: 1
                    lloc_max: 1
                    blank_min: 0
                    blank_max: 0
                  nom:
                    functions: 1
                    closures: 0
                    functions_average: 1
                    closures_average: 0
                    total: 1
                    average: 1
                    functions_min: 1
                    functions_max: 1
                    closures_min: 0
                    closures_max: 0
                  tokens:
                    tokens: 40
                    average: 40
                    min: 40
                    max: 40
                  mi:
                    original: 127.907
                    sei: 108.932
                    visual_studio: 74.799
                  abc:
                    assignments: 0
                    branches: 2
                    conditions: 1
                    magnitude: 2.236
                    value: 2.236
                    assignments_average: 0
                    branches_average: 2
                    conditions_average: 1
                    assignments_min: 0
                    assignments_max: 0
                    branches_min: 2
                    branches_max: 2
                    conditions_min: 1
                    conditions_max: 1
            metrics:
              nargs:
                function_args: 2
                closure_args: 0
                function_args_average: 2
                closure_args_average: 0
                total: 2
                value: 0
                average: 2
                function_args_min: 0
                function_args_max: 2
                closure_args_min: 0
                closure_args_max: 0
              nexits:
                sum: 1
                average: 1
                min: 0
                max: 1
              cognitive:
                sum: 0
                value: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 2
                value: 1
                average: 2
                min: 1
                max: 1
                modified:
                  sum: 2
                  value: 1
                  average: 2
                  min: 1
                  max: 1
              halstead:
                unique_operators: 14
                total_operators: 27
                unique_operands: 4
                total_operands: 7
                length: 34
                estimated_program_length: 61.303
                purity_ratio: 1.803
                vocabulary: 18
                volume: 141.777
                difficulty: 12.25
                level: 0.082
                effort: 1736.774
                time: 96.487
                bugs: 0.048
              loc:
                sloc: 5
                ploc: 5
                lloc: 1
                cloc: 0
                blank: 0
                sloc_average: 2.5
                ploc_average: 2.5
                lloc_average: 0.5
                cloc_average: 0
                blank_average: 0
                sloc_min: 3
                sloc_max: 5
                cloc_min: 0
                cloc_max: 0
                ploc_min: 3
                ploc_max: 5
                lloc_min: 1
                lloc_max: 1
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 0.5
                closures_average: 0
                total: 1
                average: 0.5
                functions_min: 0
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 44
                average: 22
                min: 4
                max: 40
              mi:
                original: 118.705
                sei: 95.758
                visual_studio: 69.418
              abc:
                assignments: 0
                branches: 2
                conditions: 1
                magnitude: 2.236
                value: 0
                assignments_average: 0
                branches_average: 1
                conditions_average: 0.5
                assignments_min: 0
                assignments_max: 0
                branches_min: 0
                branches_max: 2
                conditions_min: 0
                conditions_max: 1
              wmc:
                class_wmc_sum: 1
                interface_wmc_sum: 0
                total: 1
              npm:
                class_npm_sum: 1
                interface_npm_sum: 0
                class_methods: 1
                interface_methods: 0
                class_coa: 1
                interface_coa: 0
                total: 1
                total_methods: 1
                coa: 1
              npa:
                class_npa_sum: 0
                interface_npa_sum: 0
                class_attributes: 0
                interface_attributes: 0
                class_cda: 0
                interface_cda: 0
                total: 0
                total_attributes: 0
                cda: 0
          - name: BOOST_AUTO_TEST_CASE
            start_line: 14
            end_line: 20
            kind: function
            spaces: []
            metrics:
              nargs:
                function_args: 1
                closure_args: 0
                function_args_average: 1
                closure_args_average: 0
                total: 1
                value: 1
                average: 1
                function_args_min: 1
                function_args_max: 1
                closure_args_min: 0
                closure_args_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                value: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                value: 1
                average: 1
                min: 1
                max: 1
                modified:
                  sum: 1
                  value: 1
                  average: 1
                  min: 1
                  max: 1
              halstead:
                unique_operators: 8
                total_operators: 28
                unique_operands: 10
                total_operands: 25
                length: 53
                estimated_program_length: 57.219
                purity_ratio: 1.08
                vocabulary: 18
                volume: 221.006
                difficulty: 10
                level: 0.1
                effort: 2210.06
                time: 122.781
                bugs: 0.057
              loc:
                sloc: 7
                ploc: 7
                lloc: 5
                cloc: 0
                blank: 0
                sloc_average: 7
                ploc_average: 7
                lloc_average: 5
                cloc_average: 0
                blank_average: 0
                sloc_min: 7
                sloc_max: 7
                cloc_min: 0
                cloc_max: 0
                ploc_min: 7
                ploc_max: 7
                lloc_min: 5
                lloc_max: 5
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 65
                average: 65
                min: 65
                max: 65
              mi:
                original: 111.176
                sei: 84.794
                visual_studio: 65.015
              abc:
                assignments: 1
                branches: 5
                conditions: 0
                magnitude: 5.099
                value: 5.099
                assignments_average: 1
                branches_average: 5
                conditions_average: 0
                assignments_min: 1
                assignments_max: 1
                branches_min: 5
                branches_max: 5
                conditions_min: 0
                conditions_max: 0
        metrics:
          nargs:
            function_args: 3
            closure_args: 0
            function_args_average: 1.5
            closure_args_average: 0
            total: 3
            value: 0
            average: 1.5
            function_args_min: 0
            function_args_max: 2
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 1
            average: 0.5
            min: 0
            max: 1
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 4
            value: 1
            average: 2
            min: 1
            max: 1
            modified:
              sum: 4
              value: 1
              average: 2
              min: 1
              max: 1
          halstead:
            unique_operators: 17
            total_operators: 57
            unique_operands: 13
            total_operands: 32
            length: 89
            estimated_program_length: 117.593
            purity_ratio: 1.321
            vocabulary: 30
            volume: 436.713
            difficulty: 20.923
            level: 0.048
            effort: 9137.385
            time: 507.633
            bugs: 0.146
          loc:
            sloc: 17
            ploc: 14
            lloc: 6
            cloc: 0
            blank: 3
            sloc_average: 4.25
            ploc_average: 3.5
            lloc_average: 1.5
            cloc_average: 0
            blank_average: 0.75
            sloc_min: 3
            sloc_max: 17
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 14
            lloc_min: 1
            lloc_max: 6
            blank_min: 0
            blank_max: 3
          nom:
            functions: 2
            closures: 0
            functions_average: 0.5
            closures_average: 0
            total: 2
            average: 0.5
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 113
            average: 28.25
            min: 4
            max: 65
          mi:
            original: 92.57
            sei: 58.256
            visual_studio: 54.134
          abc:
            assignments: 1
            branches: 7
            conditions: 1
            magnitude: 7.141
            value: 0
            assignments_average: 0.25
            branches_average: 1.75
            conditions_average: 0.25
            assignments_min: 0
            assignments_max: 1
            branches_min: 0
            branches_max: 5
            conditions_min: 0
            conditions_max: 1
          npm:
            class_npm_sum: 1
            interface_npm_sum: 0
            class_methods: 1
            interface_methods: 0
            class_coa: 1
            interface_coa: 0
            total: 1
            total_methods: 1
            coa: 1
          npa:
            class_npa_sum: 0
            interface_npa_sum: 0
            class_attributes: 0
            interface_attributes: 0
            class_cda: 0
            interface_cda: 0
            total: 0
            total_attributes: 0
            cda: 0
    metrics:
      nargs:
        function_args: 3
        closure_args: 0
        function_args_average: 1.5
        closure_args_average: 0
        total: 3
        value: 0
        average: 1.5
        function_args_min: 0
        function_args_max: 2
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 1
        average: 0.5
        min: 0
        max: 1
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 5
        value: 1
        average: 2.5
        min: 1
        max: 1
        modified:
          sum: 5
          value: 1
          average: 2.5
          min: 1
          max: 1
      halstead:
        unique_operators: 17
        total_operators: 58
        unique_operands: 14
        total_operands: 33
        length: 91
        estimated_program_length: 122.79
        purity_ratio: 1.349
        vocabulary: 31
        volume: 450.832
        difficulty: 20.036
        level: 0.05
        effort: 9032.738
        time: 501.819
        bugs: 0.145
      loc:
        sloc: 17
        ploc: 14
        lloc: 6
        cloc: 0
        blank: 3
        sloc_average: 3.4
        ploc_average: 2.8
        lloc_average: 1.2
        cloc_average: 0
        blank_average: 0.6
        sloc_min: 3
        sloc_max: 17
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 14
        lloc_min: 1
        lloc_max: 6
        blank_min: 0
        blank_max: 3
      nom:
        functions: 2
        closures: 0
        functions_average: 0.4
        closures_average: 0
        total: 2
        average: 0.4
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 117
        average: 23.4
        min: 4
        max: 65
      mi:
        original: 92.174
        sei: 57.788
        visual_studio: 53.903
      abc:
        assignments: 1
        branches: 7
        conditions: 1
        magnitude: 7.141
        value: 0
        assignments_average: 0.2
        branches_average: 1.4
        conditions_average: 0.2
        assignments_min: 0
        assignments_max: 1
        branches_min: 0
        branches_max: 5
        conditions_min: 0
        conditions_max: 1
      npm:
        class_npm_sum: 1
        interface_npm_sum: 0
        class_methods: 1
        interface_methods: 0
        class_coa: 1
        interface_coa: 0
        total: 1
        total_methods: 1
        coa: 1
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 3
    closure_args: 0
    function_args_average: 1.5
    closure_args_average: 0
    total: 3
    value: 0
    average: 1.5
    function_args_min: 0
    function_args_max: 2
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 1
    average: 0.5
    min: 0
    max: 1
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 6
    value: 1
    average: 3
    min: 1
    max: 1
    modified:
      sum: 6
      value: 1
      average: 3
      min: 1
      max: 1
  halstead:
    unique_operators: 17
    total_operators: 58
    unique_operands: 16
    total_operands: 35
    length: 93
    estimated_program_length: 133.487
    purity_ratio: 1.435
    vocabulary: 33
    volume: 469.129
    difficulty: 18.594
    level: 0.054
    effort: 8722.861
    time: 484.603
    bugs: 0.141
  loc:
    sloc: 22
    ploc: 17
    lloc: 6
    cloc: 1
    blank: 5
    sloc_average: 3.667
    ploc_average: 2.833
    lloc_average: 1
    cloc_average: 0.167
    blank_average: 0.833
    sloc_min: 3
    sloc_max: 22
    cloc_min: 0
    cloc_max: 1
    ploc_min: 3
    ploc_max: 17
    lloc_min: 1
    lloc_max: 6
    blank_min: 0
    blank_max: 5
  nom:
    functions: 2
    closures: 0
    functions_average: 0.333
    closures_average: 0
    total: 2
    average: 0.333
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 126
    average: 21
    min: 4
    max: 65
  mi:
    original: 87.561
    sei: 43.203
    visual_studio: 51.205
  abc:
    assignments: 1
    branches: 7
    conditions: 1
    magnitude: 7.141
    value: 0
    assignments_average: 0.167
    branches_average: 1.167
    conditions_average: 0.167
    assignments_min: 0
    assignments_max: 1
    branches_min: 0
    branches_max: 5
    conditions_min: 0
    conditions_max: 1
  wmc:
    class_wmc_sum: 1
    interface_wmc_sum: 0
    total: 1
  npm:
    class_npm_sum: 1
    interface_npm_sum: 0
    class_methods: 1
    interface_methods: 0
    class_coa: 1
    interface_coa: 0
    total: 1
    total_methods: 1
    coa: 1
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
