snapshots/DeepSpeech/native_client/kenlm/util/spaces.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 8
kind: unit
spaces:
  - name: util
    start_line: 3
    end_line: 8
    kind: namespace
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 7
        total_operators: 262
        unique_operands: 5
        total_operands: 259
        length: 521
        estimated_program_length: 31.261
        purity_ratio: 0.06
        vocabulary: 12
        volume: 1867.765
        difficulty: 181.3
        level: 0.006
        effort: 338625.878
        time: 18812.549
        bugs: 1.619
      loc:
        sloc: 6
        ploc: 3
        lloc: 1
        cloc: 1
        blank: 2
        sloc_average: 6
        ploc_average: 3
        lloc_average: 1
        cloc_average: 1
        blank_average: 2
        sloc_min: 6
        sloc_max: 6
        cloc_min: 1
        cloc_max: 1
        ploc_min: 3
        ploc_max: 3
        lloc_min: 1
        lloc_max: 1
        blank_min: 2
        blank_max: 2
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 525
        average: 525
        min: 525
        max: 525
      mi:
        original: 102.575
        sei: 74.453
        visual_studio: 59.985
      abc:
        assignments: 1
        branches: 0
        conditions: 0
        magnitude: 1
        value: 1
        assignments_average: 1
        branches_average: 0
        conditions_average: 0
        assignments_min: 1
        assignments_max: 1
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 7
    total_operators: 262
    unique_operands: 6
    total_operands: 260
    length: 522
    estimated_program_length: 35.161
    purity_ratio: 0.067
    vocabulary: 13
    volume: 1931.63
    difficulty: 151.667
    level: 0.007
    effort: 292963.812
    time: 16275.767
    bugs: 1.47
  loc:
    sloc: 8
    ploc: 4
    lloc: 1
    cloc: 2
    blank: 3
    sloc_average: 4
    ploc_average: 2
    lloc_average: 0.5
    cloc_average: 1
    blank_average: 1.5
    sloc_min: 6
    sloc_max: 8
    cloc_min: 1
    cloc_max: 2
    ploc_min: 3
    ploc_max: 4
    lloc_min: 1
    lloc_max: 1
    blank_min: 2
    blank_max: 3
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 529
    average: 264.5
    min: 4
    max: 525
  mi:
    original: 97.509
    sei: 114.887
    visual_studio: 57.023
  abc:
    assignments: 1
    branches: 0
    conditions: 0
    magnitude: 1
    value: 0
    assignments_average: 0.5
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 1
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
