snapshots/DeepSpeech/native_client/kenlm/util/spaces.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 12
kind: unit
spaces:
  - name: util
    start_line: 6
    end_line: 10
    kind: namespace
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 5
        total_operators: 5
        unique_operands: 3
        total_operands: 3
        length: 8
        estimated_program_length: 16.365
        purity_ratio: 2.046
        vocabulary: 8
        volume: 24
        difficulty: 2.5
        level: 0.4
        effort: 60
        time: 3.333
        bugs: 0.005
      loc:
        sloc: 5
        ploc: 3
        lloc: 1
        cloc: 0
        blank: 2
        sloc_average: 5
        ploc_average: 3
        lloc_average: 1
        cloc_average: 0
        blank_average: 2
        sloc_min: 5
        sloc_max: 5
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 1
        lloc_max: 1
        blank_min: 2
        blank_max: 2
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 12
        average: 12
        min: 12
        max: 12
      mi:
        original: 128.171
        sei: 109.313
        visual_studio: 74.954
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 5
    total_operators: 5
    unique_operands: 4
    total_operands: 5
    length: 10
    estimated_program_length: 19.61
    purity_ratio: 1.961
    vocabulary: 9
    volume: 31.699
    difficulty: 3.125
    level: 0.32
    effort: 99.06
    time: 5.503
    bugs: 0.007
  loc:
    sloc: 12
    ploc: 6
    lloc: 1
    cloc: 3
    blank: 5
    sloc_average: 6
    ploc_average: 3
    lloc_average: 0.5
    cloc_average: 1.5
    blank_average: 2.5
    sloc_min: 5
    sloc_max: 12
    cloc_min: 0
    cloc_max: 3
    ploc_min: 3
    ploc_max: 6
    lloc_min: 1
    lloc_max: 1
    blank_min: 2
    blank_max: 5
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 17
    average: 8.5
    min: 5
    max: 12
  mi:
    original: 112.312
    sei: 136.243
    visual_studio: 65.679
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
